syntax = "proto3";

package dockerfile.v1;

import "gogoproto/gogo.proto";

service DockerfileService {
	rpc StartContext(stream TransferResponse) returns (stream TransferRequest);
}

message TransferRequest {
	repeated string protocol = 1;
	repeated string source = 2;
}

message TransferResponse {
	string protocol = 1;
}

message TarContent{
	bytes content = 1;
}


